# isc-playground

./: .gitignore  Dockerfile  README.md  compose.yml  isc-playground.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
